--- a/block-BJaael/code/index.html
+++ b/block-BJaael/code/index.html
@@ -13,6 +13,9 @@
   <body>
     <h1 class="heading">🤯 Disco Grid 🤩</h1>
 
+    <main>
+      <section class="disco-grid"></section>
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
