--- a/block-BJaaer/code/index.html
+++ b/block-BJaaer/code/index.html
@@ -14,7 +14,7 @@
           <input
             id="name"
             type="text"
-            name="text"
+            name="name"
             placeholder="Enter your name"
           />
         </div>
@@ -22,14 +22,14 @@
           <label for="email">Your Email:</label>
           <input
             id="email"
-            type="text"
+            type="email"
             name="email"
             placeholder="Enter your email"
           />
         </div>
         <div class="form-control">
           <label for="movies">What do you love?</label>
-          <select id="gender" name="gender">
+          <select id="timepass" name="timepass">
             <option value="movies">Movies</option>
             <option value="series">Series</option>
             <option value="others">Others</option>
@@ -38,23 +38,11 @@
 
         <div class="form-control">
           <label for="color">Choose a color</label>
-          <input
-            id="color"
-            type="color"
-            name="email"
-            placeholder="Enter your email"
-          />
+          <input id="color" type="color" name="color" />
         </div>
         <div class="form-control">
           <label for="range"> Rate the movie Inception out of 10 </label>
-          <input
-            id="range"
-            type="range"
-            max="10"
-            step="1"
-            name="email"
-            placeholder="Enter your email"
-          />
+          <input id="range" type="range" max="10" step="1" name="rating" />
         </div>
         <div class="form-control">
           <label>Book genre you love?</label>
