--- a/block-BJaaev/code/index.html
+++ b/block-BJaaev/code/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <main class="main">
+      <h1>todos</h1>
+      <input
+        type="text"
+        id="input"
+        name="input"
+        class="input"
+        placeholder="What needs to be done?"
+      />
+      <ul class="list"></ul>
+      <div class="summary">
+        <span class="left-items sum-span"><span class="count"> </span> </span>
+        <button class="all-items sum-span">All</button>
+        <button class="active-items sum-span">Active</button>
+        <button class="completed-items sum-span">Completed</button>
+        <button class="clear-completed sum-span">Clear Completed</button>
+      </div>
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
